--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <title>CardTastic E-Cards</title>
 
+    <link href="css/stylesheet.css" rel="stylesheet">
+
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -71,7 +73,8 @@
     <div class="container">
         <div class="row">
             <div class="box">
-                <div class="col-md-4">
+                <div class="col-md-4"> <!-- Form, generator buttons, and text box -->
+                    <!-- title for Form, generator buttons, and text box-->
                     <hr>
                     <h2 class="intro-text text-center">Form and generator buttons and text box</h2>
                     <hr>
@@ -92,7 +95,8 @@
                      <button type="submit" class="btn btn-secondary">Submit</button>
                     </form>
 
-                </div><!--  class col-lg-12, Form and generator buttons and text box-->
+
+                </div><!--  class col-md-4, Form, generator buttons, and text box-->
                 <div class="col-md-6"><hr>
                     <h2 class="intro-text text-center">Actual Card</h2>
                     <hr>
@@ -110,7 +114,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-center footer-text">
                 <hr>
                     <p>Copyright &copy; Amari Ashwood 2016</p>
                 <hr>
