added generator buttons

--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
                      <button type="submit" class="btn btn-secondary">Submit</button>
                     </form>
 
+                    <!--***********************************
+                    Pick-Up Line and Compliment Generator Buttons
+                    ****************************************-->
+                    <div class="generator-buttons"> <!-- holds buttons for generators -->
+                    <button type="button" class="btn btn-success">Insert Pick-Up Line</button>
+                    <button type="button" class="btn btn-success">Insert Compliment</button>
+                    </div>  <!-- holds buttons for generators -->
 
                 </div><!--  class col-md-4, Form, generator buttons, and text box-->
                 <div class="col-md-6"><hr>
